--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,10 @@
     font-family: 'Poppins';
 }
 
+body{
+    background-color: #ECF3F3;
+}
+
 #logo{
     font-family:'Sigmar';
     text-transform: uppercase;
@@ -74,6 +78,13 @@
     margin: 6px;
 }
 
+#current_day{
+    margin-top: 10px;
+    transform: translate(0px,10px);
+    color: #999;
+    font-size: 14px;
+}
+
 .theme-button{
     background-color: #069C31;
     color: white;
@@ -98,4 +109,32 @@
     text-align: center;
     outline: none;
     cursor: pointer;
+}
+
+#dashboard-content{
+    background-color: #fff;
+    border-radius: 6px;
+}
+
+.booking-cards{
+    background-color: #ECF3F3;
+    padding: 20px;
+    border-radius: 12px;
+    margin: 10px;
+}
+
+.card-title{
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: 24px;
+}
+
+.card-info{
+    margin-top: -12px;
+    font-size: 14px;
+    color: #666;
+}
+
+.card-info i{
+    margin-right: 8px;
 }
